<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vovasoft.spent.SettingsActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp">

                <com.vovasoft.wallet.Widgets.LabelledSpinner
                    android:id="@+id/language_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:labelText="@string/language"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_margin="6dp" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_budget"
                        android:textSize="18sp"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/colorAppText" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="4dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/cash"
                            android:hint="@string/cash"
                            android:inputType="number"
                            android:textColor="@color/colorAppText"
                            android:imeOptions="actionDone"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="8dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/card"
                            android:hint="@string/card"
                            android:inputType="number"
                            android:textColor="@color/colorAppText"
                            android:imeOptions="actionDone"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_margin="6dp" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget_period"
                        android:textSize="18sp"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/colorAppText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/hint_from_today"
                        android:id="@+id/textView2"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="2dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="8dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/date"
                            android:hint="@string/date"
                            android:textColor="@color/colorAppText"
                            android:editable="false"
                            android:focusable="false" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_button"
                android:layout_margin="16dp"
                android:textColor="#fff"
                android:background="@color/colorPrimary"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
