<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.vovasoft.wallet.HistoryActivity"
    android:gravity="clip_vertical"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="6dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorAppText" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="8dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/date_from"
                        android:hint="@string/date_from"
                        android:textColor="@color/colorAppText"
                        android:editable="false"
                        android:focusable="false" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="8dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/date_till"
                        android:hint="@string/date_till"
                        android:textColor="@color/colorAppText"
                        android:editable="false"
                        android:focusable="false" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="6dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spent"
                android:id="@+id/label_info_spent"
                android:textSize="24sp"
                android:textColor="@color/colorAppText"
                android:layout_gravity="bottom"
                android:gravity="bottom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="70000"
                android:id="@+id/info_spent"
                android:gravity="bottom|right"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textColor="@color/colorAppText"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/show_details"
        android:id="@+id/details"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textColor="#fff"
        android:background="@color/colorPrimary" />


    <android.support.v7.widget.CardView
        android:id="@+id/list_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="8dp"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/spent_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="6dp" />

    </android.support.v7.widget.CardView>




</LinearLayout>
